--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -7,7 +7,7 @@ jobs:
      runs-on: ubuntu-latest
      steps: 
       - name: echo a string
-        run: eccho "Hello Mahesh"
+        run: echo "Hello Mahesh"
       - name: multiline script
         run: |
           node -v
