--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -19,3 +19,11 @@ jobs:
           import platform
           print(platform.processor())
         shell: python
+    
+    run-win-commands:
+     runs-on: windows-latest
+     steps:
+       - name: Directory powershell
+         run : get-location
+       - name: Directory bash
+         run: pwd
