--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -19,9 +19,9 @@ jobs:
           import platform
           print(platform.processor())
         shell: python
-    
     run-win-commands:
      runs-on: windows-latest
+     needs: ["run-shell-commands"]
      steps:
        - name: Directory powershell
          run : get-location
