--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -7,4 +7,9 @@ jobs:
    runs-on: ubuntu-latest
    steps:
     - name: Simple JS Actions
-      uses: actions/hello-world-javascript-action@
+      id: greet
+      uses: actions/hello-world-javascript-action@v1
+      with:
+        who-to-greet: Mahesh
+    - name: Log greeting time
+      run: echo "${{steps.greet.outputs.time}}"
