--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -12,7 +12,7 @@ jobs:
         ls
     - name: Simple JS Actions
       id: greet
-      uses: actions/hello-world-javascript-action@v1``
+      uses: actions/hello-world-javascript-action@v1
       with:
         who-to-greet: Mahesh
     - name: Log greeting time
