--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -26,7 +26,7 @@ jobs:
       id: greet
       uses: actions/hello-world-javascript-action@v1
       with:
-        who-to-greet: Mahesh
+        whom-to-greet: Mahesh
     - name: Log greeting time
       run: echo "${{steps.greet.outputs.time}}"
       
