--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,9 +1,11 @@
 name: Actions workflow
 
-on: 
-  schedule:
-    - cron: "0/5 * * * *" # minutes, hours, day of the month, month, day of the week.
-    - cron: "0/6 * * * *"
+on:
+  repository_dispatch:
+    types: [build]
+  # schedule:
+  #   - cron: "0/5 * * * *" # minutes, hours, day of the month, month, day of the week.
+  #   - cron: "0/6 * * * *"
   # push:
   pull_request:
     types: [closed, assigned, opened, reopened]
