--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,14 +1,31 @@
 name: Actions workflow
 
 on:
-  repository_dispatch:
-    types: [build]
-  # schedule:
-  #   - cron: "0/5 * * * *" # minutes, hours, day of the month, month, day of the week.
-  #   - cron: "0/6 * * * *"
-  # push:
-  pull_request:
-    types: [closed, assigned, opened, reopened]
+  push:
+    
+    branches:
+      - master 
+      - 'feature/*' #* matches feature/featA, feature/featB .....
+      - 'feature/**' #* matches feature/feat/a and above 
+      
+    #* we cannot use branches-ignore parallelly 
+    #* we can ignore specific branch by including --> '!feature/featC'
+
+    # tags-ignore:
+    tags:
+      - v1.*
+    # paths-ignore:
+    paths:
+      - '**.js' #* only to run these type of workflows .... 
+      - "!filename.js" #* to ignore specific
+#   repository_dispatch:
+#     types: [build]
+#   # schedule:
+#   #   - cron: "0/5 * * * *" # minutes, hours, day of the month, month, day of the week.
+#   #   - cron: "0/6 * * * *"
+#   # push:
+#   pull_request:
+#     types: [closed, assigned, opened, reopened]
 jobs: 
   run-github-actions:
    runs-on: ubuntu-latest
