--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Default ENV Variables
       run: |
         echo "HOME: ${HOME}"
-        echo "GITHUB WORKFLOW: ${GITHUB WORKFLOW}"
+        echo "GITHUB WORKFLOW: ${GITHUB_WORKFLOW}"
         echo "GITHUB_ACTION: ${GITHUB_ACTION}"
         echo "GITHUB_ACTIONS: ${GITHUB_ACTIONS}"
         echo "GITHUB_ACTOR: ${GITHUB_ACTOR}"
@@ -39,3 +39,4 @@ jobs:
         echo "WF_ENV: ${WF_ENV}"
         echo "JOB_ENV: ${JOB_ENV}"
         echo "STEP_ENV: ${STEP_ENV}"
+        
